only-home-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: home
  name: home
spec:
  volumes:
  - name: www-content
    emptyDir: {}
  containers:
  - image: nginx
    name: home
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: www-content
