all-store.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: home
  name: home
spec:
  volumes:
  - name: www-content
    emptyDir: {}
  containers:
  - image: nginx
    name: home
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: www-content
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: home
  name: home
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: home
  type: ClusterIP

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: cart
  name: cart
spec:
  volumes:
  - name: www-content
    emptyDir: {}
  containers:
  - image: nginx
    name: cart
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: www-content
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: cart
  name: cart
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: cart
  type: ClusterIP

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: store
  name: store
spec:
  volumes:
  - name: www-content
    emptyDir: {}
  containers:
  - image: nginx
    name: store
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: www-content
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: store
  name: store
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: store
  type: ClusterIP

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: page404
  name: page404
spec:
  volumes:
  - name: www-content
    emptyDir: {}
  containers:
  - image: nginx
    name: page404
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: www-content
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: page404
  name: page404
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: page404
  type: ClusterIP
