only-home-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: home
  name: home
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: home
  type: ClusterIP
