ingress-demo-unsecure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-demo
  namespace: default
spec:
  backend: 
    serviceName: page404
    servicePort: 80
  rules:
  - host: my-store-demo.click
    http:
      paths:
      - backend:
          serviceName: store
          servicePort: 80
        path: /store
      - backend:
          serviceName: cart
          servicePort: 80
        path: /cart
      - backend:
          serviceName: home
          servicePort: 80
        path: /home
      - backend:
          serviceName: home
          servicePort: 80
        path: /
      - backend:
          serviceName: page404
          servicePort: 80
        path: /(.+)
